# dna-electrons

./: .gitignore  .zenodo.json  CITATION.cff  CITATION.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  metadata.xml  pyproject.toml
.github/workflows/: ci.yml
dna_electrons/: __init__.py  cli.py  core.py  io.py
paper/: Makefile  README.md  paper.bib  paper.md
tests/: test_core.py  test_io.py
