[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dna-electrons"
version = "0.2.1"
description = "Compute total electrons for DNA sequences with FASTA parsing and Biopython integration."
readme = "README.md"
authors = [{name = "Yash Munnalal Gupta"}]
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = ["biopython>=1.80"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/yashmgupta/dna-electrons"
Issues = "https://github.com/yashmgupta/dna-electrons/issues"
Repository = "https://github.com/yashmgupta/dna-electrons"

[project.scripts]
dna-electrons = "dna_electrons.cli:main"
